@@ -1,8 +1,9 @@
 ﻿[B]Changelog[/B]
-Fixed: VRT.nu regex was causing performance issues (Fixes #842)
-Removed: Canvas as they are now 100% on VRT.nu
+Fixed: VTM and Q2 updated their sites which broke the channel (Fixes #846)
 
 [I]Previous Changes[/I]
+Fixed: VRT.nu regex was causing performance issues (Fixes #842)
+Removed: Canvas as they are now 100% on VRT.nu
 Added: A bit more logging to the VTM.be channel (See #839)
 Fixed: Proper error in logging if VRT log in fails (See #818)
 Fixed: VTM and Q2 streams now always start at the beginning (Fixes #820)
